On est bien là non ?

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -37,3 +37,15 @@ body {
 .m40 {
   margin: 40px;
 }
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.white-text {
+  color: #fff;
+}
